added: MongoDB Connection
